# eventscraper

./: pyproject.toml
eventscraper/: bot.py  scrape.py
